fix horizontal scroll

--- a/css/mnml.css
+++ b/css/mnml.css
@@ -489,7 +489,6 @@ footer {
     position: absolute;
     bottom: 0;
     height: 100px;
-    width: 100%;
 }
 
 .wrap {
