--- a/src/_base.css
+++ b/src/_base.css
@@ -14,7 +14,6 @@ footer {
     position: absolute;
     bottom: 0;
     height: 100px;
-    width: 100%;
 }
 
 .wrap {
